--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
-{"regions": ["lhr1","fra1","pdx1"],
-  "functions": {
-    "api/**/*.js": {
-      "regions": ["lhr1","fra1","pdx1"]
-    }
-  },
+{
+  "regions": ["lhr1", "fra1", "pdx1"],
   "rewrites": [
     { "source": "/https/:match/:url*", "destination": "https://:match/:url*" },
     { "source": "/https/:match/:url*/", "destination": "https://:match/:url*/" },
