--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
-  "regions": ["lhr1", "fra1", "pdx1"],
   "rewrites": [
     { "source": "/https/:match/:url*", "destination": "https://:match/:url*" },
     { "source": "/https/:match/:url*/", "destination": "https://:match/:url*/" },
@@ -10,5 +9,7 @@
     { "source": "/:protocol/:match/:url*/", "destination": ":protocol://:match/:url*/" },
     { "source": "/:protocol*/:match/:url*", "destination": ":protocol://:match/:url*" },
     { "source": "/:protocol*/:match/:url*/", "destination": ":protocol://:match/:url*/" }
-  ]
+  ],
+
+  "regions": ["lhr1", "fra1", "pdx1"]
 }
